tests/mtcp/error/error-mtcp-error6.pkt
0.000 socket(..., SOCK_STREAM, IPPROTO_TCP) = 3
// 0.000 fcntl(3, F_GETFL) = 0x2 (flags O_RDWR)
0.000 fcntl(3, F_SETFL, O_RDWR|O_NONBLOCK) = 0

// Establish connection and verify that there was no error.
0.100 connect(3, ..., ...) = -1
0.100 > S 0:0(0) <...>

+0 < S. 1:9586(9585) ack 1 win 12336 <TS val 1 ecr 0,eol,mss 14705,eol>
+0.1 > . 1:1(0) ack 1 <...>

+0 < . 1:3899(3898) ack 1 win 25958
+0.1 > . 1:1(0) ack 3899 <...>

+0 < . 3899:5829(1930) ack 757727348 win 29540 
+0.1 read(3, ..., 47) =  47
+0.1 write(3, ..., 1849) =  1849
+0.1 > . 1:1(0) ack 3899 <...>